--- a/styles/index.css
+++ b/styles/index.css
@@ -12,18 +12,21 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
 body {
 	background-color: black;
 	color: #fff;
-	overflow: hidden;
 	font-family: 'Comfortaa', sans-serif;
 }
 
 a {
 	text-decoration: none;
-	
 }
 
 a:visited {
@@ -150,19 +153,82 @@ h1 {
 }
 
 @media (max-width: 980px) {
-	.person, .bolt {
+	.header {
+		margin: 10px auto;
+	}
+
+	.header h2 {
+		text-align: center;
+	}
+
+	.person, .bolt, .lightnings {
 		display: none;
 	}
-	.content {
-		min-width: 400px;
-		min-height: 500px;
-		margin: 20px auto;
+
+	.wrapper_content__text {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		margin-top: 60px;
 	}
+
+	.content {
+		margin: 20px auto;
+		gap: 0;
+		padding: 10px;
+	}
+	.content__text {
+		line-height: 33px;
+	}
+
 	h1 {
 		font-size: 30px;
 	}
+	.buttons {
+		gap: 10px;
+    	margin-top: 50px;
+	}
+
 	.buttons button {
 		width: 50%;
+		margin-top: 20px;
 	}
-	
+	.buttons a {
+		text-align: center;
+	}
+}
+
+@media (max-width: 375px) {
+	.person, .bolt, .lightnings {
+		display: none;
+	}
+	.wrapper_content__text {
+		margin-top: 15px;
+		gap: 0;
+	}
+
+	.content {
+		margin: 20px auto;
+		gap: 0;
+		padding: 10px;
+	}
+	.content__text {
+		line-height: 18px;
+	}
+
+	h1 {
+		font-size: 30px;
+	}
+	.buttons {
+		gap: 0;
+		margin-top: 0;
+	}
+
+	.buttons button {
+		width: 50%;
+		margin-top: 20px;
+	}
+	.buttons a {
+		text-align: center;
+	}
 }
