--- a/styles/index.css
+++ b/styles/index.css
@@ -169,7 +169,6 @@ h1 {
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
-		margin-top: 60px;
 	}
 
 	.content {
@@ -186,12 +185,9 @@ h1 {
 	}
 	.buttons {
 		gap: 10px;
-    	margin-top: 50px;
 	}
-
 	.buttons button {
 		width: 50%;
-		margin-top: 20px;
 	}
 	.buttons a {
 		text-align: center;
@@ -220,13 +216,12 @@ h1 {
 		font-size: 30px;
 	}
 	.buttons {
-		gap: 0;
-		margin-top: 0;
+		gap: 15px;
+		margin-top: 25px;
 	}
 
 	.buttons button {
 		width: 50%;
-		margin-top: 20px;
 	}
 	.buttons a {
 		text-align: center;
