--- a/styles/index.css
+++ b/styles/index.css
@@ -198,7 +198,7 @@ h1 {
 	}
 }
 
-@media (max-width: 375px) {
+@media (max-width: 400px) {
 	.person, .bolt, .lightnings {
 		display: none;
 	}
@@ -222,10 +222,11 @@ h1 {
 	.buttons {
 		gap: 0;
 		margin-top: 0;
+		flex-direction: row;
+		
 	}
 
 	.buttons button {
-		width: 50%;
 		margin-top: 20px;
 	}
 	.buttons a {
